nvml-wrapper-sys/src/bindings/linux.rs

#![allow(non_upper_case_globals)]
#![allow(non_camel_case_types)]
#![allow(non_snake_case)]
#![allow(dead_code)]

/* automatically generated by rust-bindgen */

pub const NVML_API_VERSION: ::std::os::raw::c_uint = 8;
pub const NVML_API_VERSION_STR: &'static [u8; 2usize] = b"8\x00";
pub const NVML_VALUE_NOT_AVAILABLE: ::std::os::raw::c_int = -1;
pub const NVML_DEVICE_PCI_BUS_ID_BUFFER_SIZE: ::std::os::raw::c_uint = 16;
pub const NVML_NVLINK_MAX_LINKS: ::std::os::raw::c_uint = 4;
pub const NVML_MAX_PHYSICAL_BRIDGE: ::std::os::raw::c_uint = 128;
pub const nvmlFlagDefault: ::std::os::raw::c_uint = 0;
pub const nvmlFlagForce: ::std::os::raw::c_uint = 1;
pub const nvmlEventTypeSingleBitEccError: ::std::os::raw::c_uint = 1;
pub const nvmlEventTypeDoubleBitEccError: ::std::os::raw::c_uint = 2;
pub const nvmlEventTypePState: ::std::os::raw::c_uint = 4;
pub const nvmlEventTypeXidCriticalError: ::std::os::raw::c_uint = 8;
pub const nvmlEventTypeClock: ::std::os::raw::c_uint = 16;
pub const nvmlEventTypeNone: ::std::os::raw::c_uint = 0;
pub const nvmlEventTypeAll: ::std::os::raw::c_uint = 31;
pub const nvmlClocksThrottleReasonGpuIdle: ::std::os::raw::c_uint = 1;
pub const nvmlClocksThrottleReasonApplicationsClocksSetting:
          ::std::os::raw::c_uint =
    2;
pub const nvmlClocksThrottleReasonUserDefinedClocks: ::std::os::raw::c_uint =
    2;
pub const nvmlClocksThrottleReasonSwPowerCap: ::std::os::raw::c_uint = 4;
pub const nvmlClocksThrottleReasonHwSlowdown: ::std::os::raw::c_uint = 8;
pub const nvmlClocksThrottleReasonSyncBoost: ::std::os::raw::c_uint = 16;
pub const nvmlClocksThrottleReasonUnknown: ::std::os::raw::c_longlong =
    -9223372036854775808;
pub const nvmlClocksThrottleReasonNone: ::std::os::raw::c_uint = 0;
pub const nvmlClocksThrottleReasonAll: ::std::os::raw::c_longlong =
    -9223372036854775777;
pub const NVML_DEVICE_INFOROM_VERSION_BUFFER_SIZE: ::std::os::raw::c_uint =
    16;
pub const NVML_DEVICE_UUID_BUFFER_SIZE: ::std::os::raw::c_uint = 80;
pub const NVML_DEVICE_PART_NUMBER_BUFFER_SIZE: ::std::os::raw::c_uint = 80;
pub const NVML_SYSTEM_DRIVER_VERSION_BUFFER_SIZE: ::std::os::raw::c_uint = 80;
pub const NVML_SYSTEM_NVML_VERSION_BUFFER_SIZE: ::std::os::raw::c_uint = 80;
pub const NVML_DEVICE_NAME_BUFFER_SIZE: ::std::os::raw::c_uint = 64;
pub const NVML_DEVICE_SERIAL_BUFFER_SIZE: ::std::os::raw::c_uint = 30;
pub const NVML_DEVICE_VBIOS_VERSION_BUFFER_SIZE: ::std::os::raw::c_uint = 32;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct nvmlDevice_st([u8; 0]);
pub type nvmlDevice_t = *mut nvmlDevice_st;
#[repr(C)]
#[derive(Debug, Default, Copy)]
pub struct nvmlPciInfo_st {
    pub busId: [::std::os::raw::c_char; 16usize],
    pub domain: ::std::os::raw::c_uint,
    pub bus: ::std::os::raw::c_uint,
    pub device: ::std::os::raw::c_uint,
    pub pciDeviceId: ::std::os::raw::c_uint,
    pub pciSubSystemId: ::std::os::raw::c_uint,
    pub reserved0: ::std::os::raw::c_uint,
    pub reserved1: ::std::os::raw::c_uint,
    pub reserved2: ::std::os::raw::c_uint,
    pub reserved3: ::std::os::raw::c_uint,
}
#[test]
fn bindgen_test_layout_nvmlPciInfo_st() {
    assert_eq!(::std::mem::size_of::<nvmlPciInfo_st>() , 52usize , concat ! (
               "Size of: " , stringify ! ( nvmlPciInfo_st ) ));
    assert_eq! (::std::mem::align_of::<nvmlPciInfo_st>() , 4usize , concat ! (
                "Alignment of " , stringify ! ( nvmlPciInfo_st ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlPciInfo_st ) ) . busId as * const _
                as usize } , 0usize , concat ! (
                "Alignment of field: " , stringify ! ( nvmlPciInfo_st ) , "::"
                , stringify ! ( busId ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlPciInfo_st ) ) . domain as * const _
                as usize } , 16usize , concat ! (
                "Alignment of field: " , stringify ! ( nvmlPciInfo_st ) , "::"
                , stringify ! ( domain ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlPciInfo_st ) ) . bus as * const _ as
                usize } , 20usize , concat ! (
                "Alignment of field: " , stringify ! ( nvmlPciInfo_st ) , "::"
                , stringify ! ( bus ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlPciInfo_st ) ) . device as * const _
                as usize } , 24usize , concat ! (
                "Alignment of field: " , stringify ! ( nvmlPciInfo_st ) , "::"
                , stringify ! ( device ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlPciInfo_st ) ) . pciDeviceId as *
                const _ as usize } , 28usize , concat ! (
                "Alignment of field: " , stringify ! ( nvmlPciInfo_st ) , "::"
                , stringify ! ( pciDeviceId ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlPciInfo_st ) ) . pciSubSystemId as *
                const _ as usize } , 32usize , concat ! (
                "Alignment of field: " , stringify ! ( nvmlPciInfo_st ) , "::"
                , stringify ! ( pciSubSystemId ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlPciInfo_st ) ) . reserved0 as * const
                _ as usize } , 36usize , concat ! (
                "Alignment of field: " , stringify ! ( nvmlPciInfo_st ) , "::"
                , stringify ! ( reserved0 ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlPciInfo_st ) ) . reserved1 as * const
                _ as usize } , 40usize , concat ! (
                "Alignment of field: " , stringify ! ( nvmlPciInfo_st ) , "::"
                , stringify ! ( reserved1 ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlPciInfo_st ) ) . reserved2 as * const
                _ as usize } , 44usize , concat ! (
                "Alignment of field: " , stringify ! ( nvmlPciInfo_st ) , "::"
                , stringify ! ( reserved2 ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlPciInfo_st ) ) . reserved3 as * const
                _ as usize } , 48usize , concat ! (
                "Alignment of field: " , stringify ! ( nvmlPciInfo_st ) , "::"
                , stringify ! ( reserved3 ) ));
}
impl Clone for nvmlPciInfo_st {
    fn clone(&self) -> Self { *self }
}
pub type nvmlPciInfo_t = nvmlPciInfo_st;
#[repr(C)]
#[derive(Debug, Default, Copy)]
pub struct nvmlEccErrorCounts_st {
    pub l1Cache: ::std::os::raw::c_ulonglong,
    pub l2Cache: ::std::os::raw::c_ulonglong,
    pub deviceMemory: ::std::os::raw::c_ulonglong,
    pub registerFile: ::std::os::raw::c_ulonglong,
}
#[test]
fn bindgen_test_layout_nvmlEccErrorCounts_st() {
    assert_eq!(::std::mem::size_of::<nvmlEccErrorCounts_st>() , 32usize ,
               concat ! ( "Size of: " , stringify ! ( nvmlEccErrorCounts_st )
               ));
    assert_eq! (::std::mem::align_of::<nvmlEccErrorCounts_st>() , 8usize ,
                concat ! (
                "Alignment of " , stringify ! ( nvmlEccErrorCounts_st ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlEccErrorCounts_st ) ) . l1Cache as *
                const _ as usize } , 0usize , concat ! (
                "Alignment of field: " , stringify ! ( nvmlEccErrorCounts_st )
                , "::" , stringify ! ( l1Cache ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlEccErrorCounts_st ) ) . l2Cache as *
                const _ as usize } , 8usize , concat ! (
                "Alignment of field: " , stringify ! ( nvmlEccErrorCounts_st )
                , "::" , stringify ! ( l2Cache ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlEccErrorCounts_st ) ) . deviceMemory
                as * const _ as usize } , 16usize , concat ! (
                "Alignment of field: " , stringify ! ( nvmlEccErrorCounts_st )
                , "::" , stringify ! ( deviceMemory ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlEccErrorCounts_st ) ) . registerFile
                as * const _ as usize } , 24usize , concat ! (
                "Alignment of field: " , stringify ! ( nvmlEccErrorCounts_st )
                , "::" , stringify ! ( registerFile ) ));
}
impl Clone for nvmlEccErrorCounts_st {
    fn clone(&self) -> Self { *self }
}
pub type nvmlEccErrorCounts_t = nvmlEccErrorCounts_st;
#[repr(C)]
#[derive(Debug, Default, Copy)]
pub struct nvmlUtilization_st {
    pub gpu: ::std::os::raw::c_uint,
    pub memory: ::std::os::raw::c_uint,
}
#[test]
fn bindgen_test_layout_nvmlUtilization_st() {
    assert_eq!(::std::mem::size_of::<nvmlUtilization_st>() , 8usize , concat !
               ( "Size of: " , stringify ! ( nvmlUtilization_st ) ));
    assert_eq! (::std::mem::align_of::<nvmlUtilization_st>() , 4usize , concat
                ! ( "Alignment of " , stringify ! ( nvmlUtilization_st ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlUtilization_st ) ) . gpu as * const _
                as usize } , 0usize , concat ! (
                "Alignment of field: " , stringify ! ( nvmlUtilization_st ) ,
                "::" , stringify ! ( gpu ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlUtilization_st ) ) . memory as *
                const _ as usize } , 4usize , concat ! (
                "Alignment of field: " , stringify ! ( nvmlUtilization_st ) ,
                "::" , stringify ! ( memory ) ));
}
impl Clone for nvmlUtilization_st {
    fn clone(&self) -> Self { *self }
}
pub type nvmlUtilization_t = nvmlUtilization_st;
#[repr(C)]
#[derive(Debug, Default, Copy)]
pub struct nvmlMemory_st {
    pub total: ::std::os::raw::c_ulonglong,
    pub free: ::std::os::raw::c_ulonglong,
    pub used: ::std::os::raw::c_ulonglong,
}
#[test]
fn bindgen_test_layout_nvmlMemory_st() {
    assert_eq!(::std::mem::size_of::<nvmlMemory_st>() , 24usize , concat ! (
               "Size of: " , stringify ! ( nvmlMemory_st ) ));
    assert_eq! (::std::mem::align_of::<nvmlMemory_st>() , 8usize , concat ! (
                "Alignment of " , stringify ! ( nvmlMemory_st ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlMemory_st ) ) . total as * const _ as
                usize } , 0usize , concat ! (
                "Alignment of field: " , stringify ! ( nvmlMemory_st ) , "::"
                , stringify ! ( total ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlMemory_st ) ) . free as * const _ as
                usize } , 8usize , concat ! (
                "Alignment of field: " , stringify ! ( nvmlMemory_st ) , "::"
                , stringify ! ( free ) ));
    assert_eq! (unsafe {
                & ( * ( 0 as * const nvmlMemory_st ) ) . used as * const _ as
                usize } , 16usize , concat ! (
                "Alignment of field: " , stringify ! ( nvmlMemory_st ) , "::"
                , stringify ! ( used ) ));
}
impl Clone for nvmlMemory_st {
    fn clone(&self) -> Self { *self }
}
pub type nvmlMemory_t = nvmlMemory_st;
#[repr(C)]
#[derive(Debug, Default, Copy)]
pub struct nvmlBAR1Memory_st {
    pub bar1Total: ::std::os::raw::c_ulonglong,
    pub bar1Free: ::std::os::raw::c_ulonglong,
    pub bar1Used: ::std::os::raw::c_ulonglong,
}
